--- a/abto_voip_sdk/example/android/app/build.gradle
+++ b/abto_voip_sdk/example/android/app/build.gradle
@@ -48,6 +48,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    namespace 'org.abtollc.voip.abto_voip_sdk_example'
 }
 
 flutter {
