--- a/abto_voip_sdk/example/android/app/src/main/AndroidManifest.xml
+++ b/abto_voip_sdk/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.abtollc.voip.abto_voip_sdk_example">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="abto_voip_sdk_example"
         android:icon="@mipmap/ic_launcher">
